# qualabinance

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: quant-researcher.md
companies/: qualabinance.md
docs/: chinese-wall.md  compliance.md  risk-policy.md  trademark.md
knowledge/: 00-INDEX.md  LIBRARY.md  QUICK-REFERENCE.md  README.md  TOPIC-INDEX.md  _continuous-research.md  maintenance-loop.sh
knowledge/01-foundations/: README.md
knowledge/02-finance/: README.md
knowledge/02-finance/markets/: _global-markets.md
knowledge/05-resources/: _additional-sources.md  _more-live-sources.md  _multi-source-catalog.md  arxiv-frontier-live.md  github-trending.md  huggingface-finance-catalog.md  kaggle-finance-catalog.md  more-live-sources.md  openalex-cross-disciplinary.md  trending-and-dark-horses.md
knowledge/05-resources/books/: _canonical.md
knowledge/05-resources/data-providers/: _with-papers.md  treemap-primary-mapping.md
knowledge/05-resources/github-projects/: _github-with-papers.md  _paper-with-code.md
knowledge/05-resources/papers/: _cross-link-map.md  _q1-2024-2026-frontier.md  _q1-econometrics.md  _q1-ml-finance.md  _q1-portfolio-risk.md
knowledge/06-variable-framework/: L1-L5-series-codes.md  README.md
projects/: README.md
projects/01-foundations-notebooks/: README.md
projects/02-stock-analysis/: README.md
projects/03-options-pricer/: README.md
projects/04-backtest-engine/: README.md
projects/05-garch-volatility/: README.md
projects/06-portfolio-optimizer/: README.md
projects/07-hierarchical-data-pipeline/: .env.example  Makefile  README.md  SPEC.md
projects/07-hierarchical-data-pipeline/src/: __init__.py  align.py  cli.py  config.py  ingest.py  store.py  transform.py
projects/07-hierarchical-data-pipeline/tests/: test_pipeline.py
projects/08-multi-asset-platform/: README.md
scripts/: pull_arxiv.py  pull_github_trending.py  pull_huggingface.py  pull_kaggle.py  pull_more_sources.py  pull_openalex.py
state/loop-engineering/: STATE.md  run-log-2026-06-28.md
workflows/: README.md  daily-research-update.md
