[project]
name = "qualabinance"
version = "0.1.0"
description = "Multi-asset quantitative finance platform — research, backtest, risk, and live trading."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "CEO", email = "ceo@open-uppu.local" },
]
keywords = [
    "quantitative-finance",
    "algorithmic-trading",
    "backtesting",
    "risk-management",
    "portfolio-optimization",
    "machine-learning",
    "multi-asset",
    "options-pricing",
    "volatility-modeling",
]

# ===========================================
# Core dependencies
# ===========================================
dependencies = [
    # Core data + numerics
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "polars>=0.20",

    # Statistics / econometrics
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "arch>=6.2",                      # GARCH family
    "pmdarima>=2.0",                  # ARIMA
    "ruptures>=1.1",                  # regime detection

    # ML / DL
    "torch>=2.2",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "transformers>=4.40",

    # Finance-specific
    "yfinance>=0.2.40",
    "quantstats>=0.0.62",
    "vectorbt>=0.26",
    "riskfolio-lib>=6.5",             # portfolio optimization
    "QuantLib-Python>=1.34",
    "ccxt>=4.3",                       # crypto exchanges
    "ta>=0.11",                        # technical analysis
    "empyrical-reloaded>=0.5",         # risk metrics
    "pyfolio-reloaded>=0.9",

    # Data fetching
    "requests>=2.31",
    "aiohttp>=3.9",
    "websockets>=12.0",
    "pandas-datareader>=0.10",

    # Visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "dash>=2.16",

    # Notebook / dev
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "rich>=13.7",
    "typer>=0.12",
    "pydantic>=2.6",
    "loguru>=0.7",

    # Config / env
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "toml>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
    "detect-secrets>=1.4",
    "bandit>=1.7",
    "black>=24.3",
    "ipdb>=0.13",
]

broker = [
    "alpaca-py>=0.30",                 # US equities
    "ib_insync>=0.9.86",               # Interactive Brokers
    "python-binance>=1.0.19",          # crypto
    "oandapyV20>=0.7.2",               # FX
    "coinbase-advanced-py>=1.3",        # crypto
]

ml = [
    "transformers>=4.40",
    "datasets>=2.18",
    "accelerate>=0.28",
    "peft>=0.9",
]

[project.urls]
Homepage = "https://github.com/open-uppu/qualabinance"
Repository = "https://github.com/open-uppu/qualabinance"
Issues = "https://github.com/open-uppu/qualabinance/issues"

# ===========================================
# uv workspace config
# ===========================================
[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

# ===========================================
# Tooling
# ===========================================
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests (require external services)",
    "network: requires internet access",
    "live: live trading tests (NEVER run automatically)",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "projects/*/notebooks/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# ===========================================
# Project structure (workspace)
# ===========================================
[tool.qualabinance]
version = "0.1.0"
asset_classes = [
    "equities",
    "etfs",
    "bonds",
    "futures",
    "options",
    "crypto-spot",
    "crypto-derivatives",
    "fx",
    "commodities",
    "reits",
    "prediction-markets",
    "tokenized-rwas",
]
risk_policy = "docs/risk-policy.md"
chinese_wall = "docs/chinese-wall.md"
